# web_assembly_rust_benchmark

./: .$wasm-architecture.drawio.bkp  .$web-assmebly-data-flow.drawio.bkp  .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  historical_options_information.json  traffic_incidents.json  wasm-architecture.drawio  web-assmebly-data-flow.drawio
benchmark_plotter/: benchmark_plotter.sln
benchmark_results/: remove_heap_trees.sh
historical_options_consumer/: Cargo.toml  massif.out.debug-naive-100  massif.out.debug-naive-1000  massif.out.debug-naive-10000  massif.out.debug-naive-100000  massif.out.debug-wasm-100  massif.out.debug-wasm-1000  massif.out.debug-wasm-10000  massif.out.debug-wasm-100000  massif.out.release-naive-100  massif.out.release-naive-1000  massif.out.release-naive-10000  massif.out.release-naive-100000  massif.out.release-wasm-100  massif.out.release-wasm-1000  massif.out.release-wasm-10000  massif.out.release-wasm-100000  sample_data.json
historical_options_consumer/benches/: wasm_benchmark.rs
historical_options_consumer/src/: lib.rs  main.rs
historical_options_consumer/src/kaffka/: consumer.rs  mod.rs
historical_options_consumer/src/models/: mod.rs  types.rs
historical_options_consumer/src/processing/: mod.rs  options_processor.rs
historical_options_consumer/src/services/: consumer_service.rs  consumer_service_naive.rs  consumer_service_wasm.rs  mod.rs
historical_options_consumer/wasm-filter/: Cargo.toml
historical_options_producer/: Cargo.toml
mock-options-server/: Dockerfile  app.py
src/: main.rs  models.rs
(+165 files in other folders)
