[package]
name = "historical_options_consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
wasmtime = "8.0"
anyhow = "1.0"
rdkafka = { version = "0.29", features = ["cmake-build"] }
