[package]
name = "historical_options_consumer"
version = "0.1.0"
edition = "2021"

[lib]
name = "historical_options_consumer"
path = "src/lib.rs"

[[bin]]
name = "historical_options_consumer"
path = "src/main.rs"

[dependencies]
rocket = "=0.5.0-rc.4"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.193", features = ["derive"] }
wasmtime = "8.0"
anyhow = "1.0"
rdkafka = { version = "0.29", features = ["cmake-build"] }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "wasm_benchmark"
harness = false